--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
+    "formik": "^2.4.5",
     "framer-motion": "^11.0.3",
+    "lodash.debounce": "^4.0.8",
+    "notiflix": "^3.2.7",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-loader-spinner": "^6.1.6",
